--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,6 +8,7 @@
     <nav class="navbar">
         <ul>
             <li><a href=".">Home</a></li>
+            <li><a href="./predict">Predict</a></li>
             <li><a href=".">Contact</a></li>
             <li><a href=".">About</a></li>
         </ul> 
