--- a/app/templates/predict.html
+++ b/app/templates/predict.html
@@ -18,12 +18,12 @@
   
           <label for="region">Region:</label>
           <select name="region" id="region">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="main-source-of-income">Main Source of Income:</label>
           <select name="main-source-of-income" id="main-source-of-income">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
         </div>
   
@@ -32,17 +32,17 @@
   
           <label for="household-head-sex">Household head sex:</label>
           <select name="household-head-sex" id="household-head-sex">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="household-head-marital-status">Household head marital status:</label>
           <select name="household-head-marital-status" id="household-head-marital-status">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="household-head-job-or-business-indicator">Household head job or business indicator:</label>
           <select name="household-head-job-or-business-indicator" id="household-head-job-or-business-indicator">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
         </div>
@@ -51,7 +51,7 @@
   
           <label for="type-of-household">Type of household:</label>
           <select name="type-of-household" id="type-of-household">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="total-number-of-family-members">Total number of family members:</label>
@@ -77,22 +77,22 @@
   
           <label for="type-of-building-house">Type of building house:</label>
           <select name="type-of-building-house" id="type-of-building-house">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="type-of-roof">Type of roof:</label>
           <select name="type-of-roof" id="type-of-roof">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="type-of-walls">Type of walls:</label>
           <select name="type-of-roof" id="type-of-roof">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="tenure-status">Tenure status:</label>
           <select name="type-of-roof" id="type-of-roof">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="house-floor-area">House floor area:</label>
@@ -113,17 +113,17 @@
           <h2>Household Utilities</h2>
           <label for="toilet-facilities">Toilet facilities:</label>
           <select name="toilet-facilities" id="toilet-facilities">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
           
           <label for="main-source-of-water-supply">Main source of water supply:</label>
           <select name="main-source-of-water-supply" id="main-source-of-water-supply">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
   
           <label for="electricity">Electricity:</label>
           <select name="electricity" id="electricity">
-            <option disabled>Choose an option</option>
+            <option value="" disabled selected>Select an option</option>
           </select>
         </div> 
   
