--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,19 +5,12 @@
 {% endblock %}
 
 {% block main %}
-  <div class="input-form">
-    <h1>KMeans Web App</h1>
-    <form action="/" method="POST">
-      <label for="x">X-coordinate:</label>
-      <input type="text" id="x" name="x"><br><br>
-      <label for="y">Y-coordinate:</label>
-      <input type="text" id="y" name="y"><br><br>
-      <input type="submit" value="Submit">
-    </form>
-    {% if result %}
-    <div id="result">
-      <p>The data point ({{ result.x }}, {{ result.y }}) belongs to cluster {{ result.cluster_label }}</p>
-    </div>
-    {% endif %}
+  <div class="container">
+    <h1>CS 180: Predictive model of household income using clustering</h1>
+    <h2>Project Summary</h2>
+    <p>In this project, a <a href="https://www.kaggle.com/datasets/grosvenpaul/family-income-and-expenditure">dataset</a> based on the Family Income and Expenditure Survey (FIES) in
+      the Philippines is put through K-means clustering. Through clustering, we aim to figure out possible classifications for households through the said dataset. We suspect that 
+      the clusters will be correlated with income or geographic areas from which a household belongs.</p>
   </div>
+
 {% endblock %}
