--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,10 +7,8 @@
 {% block main %}
   <div class="container">
     <h1>CS 180: Predictive model of household income using clustering</h1>
-    <h2>Project Summary</h2>
-    <p>In this project, a <a href="https://www.kaggle.com/datasets/grosvenpaul/family-income-and-expenditure">dataset</a> based on the Family Income and Expenditure Survey (FIES) in
-      the Philippines is put through K-means clustering. Through clustering, we aim to figure out possible classifications for households through the said dataset. We suspect that 
-      the clusters will be correlated with income or geographic areas from which a household belongs.</p>
+    <br>
+    <a href="./predict"><button class="predict-button">Try the classifier</button></a>
   </div>
 
 {% endblock %}
