--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KMeans Web App{% block title %}{% endblock %}</title>
+    <title>CS 180 Project{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
 </head>
 <body>
@@ -9,8 +9,8 @@
         <ul>
             <li><a href=".">Home</a></li>
             <li><a href="./predict">Predict</a></li>
-            <li><a href=".">Contact</a></li>
-            <li><a href=".">About</a></li>
+            <li><a href="./about">About</a></li>
+            <li><a href="./contact">Contact</a></li>
         </ul> 
     </nav>
     <main>
