Add randomize button

--- a/app/templates/predict.html
+++ b/app/templates/predict.html
@@ -7,6 +7,7 @@
 {% block main %}
   <div class="container">
     <h1>Household classifier</h1>
+    <button id="randomize-button">Randomize</button>
     <form id="income-form" action="/predict" method="POST">
       <div class="form-grid">
         <div class="form-container">
