--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -93,7 +93,13 @@ a {
   text-align: center;
 }
 
-.form-grid {
+.wide-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.form-grid, .results-grid {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
@@ -101,10 +107,11 @@ a {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-.form-container {
+.form-container, .results-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-overflow: inherit;
 }
 
 #income-form select {
