--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href=".">Home</a></li>
             <li><a href="./predict">Predict</a></li>
+            <li><a href="./clusters">Clusters</a></li>
             <li><a href="./about">About</a></li>
             <li><a href="./contact">Contact</a></li>
         </ul> 
