--- a/app/templates/predict_results.html
+++ b/app/templates/predict_results.html
@@ -70,7 +70,7 @@
           {% endfor %}
         </ul>
       </div>
-
     </div>
+    <a href="/clusters"><button>Back to predict</button></a>
   </div>
 {% endblock %}
