--- a/app/templates/predict.html
+++ b/app/templates/predict.html
@@ -18,13 +18,15 @@
             <option value="" disabled selected>Select an option</option>
           </select>
 
-          <label for="total-household-income">Total Household Income:</label>
-          <input required type="range" id="total-household-income" name="total-household-income" min="0" max="100000" class="slider">
-          <input required type="text" id="total-household-income-display" name="total-household-income-display">
+          <div style="display: none;">
+            <label for="total-household-income">Total Household Income:</label>
+            <input type="range" id="total-household-income" name="total-household-income" min="0" max="100000" class="slider">
+            <input type="text" id="total-household-income-display" name="total-household-income-display">
 
-          <label for="total-income-from-entrepreneurial-acitivites">Total income from entrepreneurial activities:</label>
-          <input required type="range" id="total-income-from-entrepreneurial-acitivites" name="total-income-from-entrepreneurial-acitivites" min="0" max="100000" class="slider">
-          <input required type="text" id="total-income-from-entrepreneurial-acitivites-display" name="total-income-from-entrepreneurial-acitivites-display">
+            <label for="total-income-from-entrepreneurial-acitivites">Total income from entrepreneurial activities:</label>
+            <input type="range" id="total-income-from-entrepreneurial-acitivites" name="total-income-from-entrepreneurial-acitivites" min="0" max="100000" class="slider">
+            <input type="text" id="total-income-from-entrepreneurial-acitivites-display" name="total-income-from-entrepreneurial-acitivites-display">
+          </div>
   
           <label for="main-source-of-income">Main Source of Income:</label>
           <select required name="main-source-of-income" id="main-source-of-income">
