Update about page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,13 +7,16 @@
 {% block main %}
   <div class="container">
     <h2>Project Summary</h2>
-    <p>In this project, a <a href="https://www.kaggle.com/datasets/grosvenpaul/family-income-and-expenditure">dataset</a> based on the Family Income and Expenditure Survey (FIES) in
-      the Philippines is put through K-means clustering. Through clustering, we aim to figure out possible classifications for households using the data from the dataset. We suspect that 
-      the clusters will be correlated with income or geographic areas from which a household belongs.
+    <p>This project involves analyzing a <a href="https://www.kaggle.com/datasets/grosvenpaul/family-income-and-expenditure">dataset</a> 
+      derived from the Family Income and Expenditure Survey (FIES) in the Philippines using K-means clustering. The goal is to identify 
+      potential household classifications by leveraging the dataset's information. Our hypothesis suggests that these classifications will 
+      likely be associated with income levels and geographic regions.
     </p>
     <h2>Results</h2>
-    <p>The group managed to classify the dataset into 7 clusters. As was suspected, the clusters appear to have been mainly classified based on income, 
-      region, and expenditures.
+    <p>The team successfully performed K-means clustering on the dataset, resulting in the identification of 7 distinct clusters. 
+      Consistent with our expectations, these clusters were primarily determined by factors such as income, region, and expenditure 
+      patterns. Notably, clusters 4 and 5 effectively represent the upper and lower socioeconomic classes, respectively, while the 
+      remaining clusters fall in between.
     </p>
     <figure>
       <img src="../static/inertia-plot.png" alt="2D Scatter plot" srcset="">
