Fix button link

--- a/app/templates/predict_results.html
+++ b/app/templates/predict_results.html
@@ -71,6 +71,6 @@
         </ul>
       </div>
     </div>
-    <a href="/clusters"><button>Back to predict</button></a>
+    <a href="/predict"><button>Back to predict</button></a>
   </div>
 {% endblock %}
