--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -30,6 +30,58 @@
 			<embed type="text/html" src="../static/tsne_3d.html" style="width: 600px; height:600px;"> 
 			<figcaption>3D Scatter plot</figcaption>
 		</figure>
+		<details>
+			<summary style="cursor: pointer;">Box plots</summary>
+			<figure>
+				<img src="../static/boxplots1.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots2.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots3.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots4.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots5.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots6.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots7.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots8.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots9.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots10.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots11.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots12.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots13.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots14.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots15.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots16.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots17.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots18.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots19.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots20.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots21.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots22.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots23.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots24.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots25.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots26.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots27.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots28.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots29.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots30.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots31.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots32.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots33.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots34.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots35.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots36.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots37.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots38.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots39.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots40.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots41.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots42.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots43.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots44.png" alt="Box plots" srcset="">
+				<img src="../static/boxplots45.png" alt="Box plots" srcset="">
+				<figcaption>Box plots</figcaption>
+			</figure>
+		</details>
+		
 	</div>
 
 {% endblock %}
