--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block main %}
   <div class="container">
-    <h1>CS 180 project: Predictive model of household income using clustering</h1>
+    <h1>CS 180 project: Clustering of Filipino Households using K-Means</h1>
     <br>
     <a href="./predict"><button class="predict-button">Try the classifier</button></a>
   </div>
