Add cluster images

--- a/app/templates/clusters.html
+++ b/app/templates/clusters.html
@@ -12,7 +12,8 @@
       </div>
       <script src="{{ url_for('static', filename='clusters.js') }}"></script>
     </form>
-    
+    <br>
+    <img src="../static/clusters.png" alt="">
     
     </div>
   </div>
