--- a/app/templates/clusters_info.html
+++ b/app/templates/clusters_info.html
@@ -8,6 +8,7 @@
   <div class="wide-container">
     <h2>Cluster {{ results.cluster }} information</h2>
     <h3>Number of households: {{ results.number_of_households }} / 41544 households</h3>
+    <img src="../static/{{ image }}" alt="">
     <div class="results-grid">
       <div class="results-container">
         <h2>Region and Income</h2>
